tdf#92792: Register mork driver on windows 64bit and make it work

Mork service wasn't registred on windows as it was generally
excluded on this platform not matter what architecture was used.

Pofile discovery was broken, as XP_WIN wasn't define and the
code fall back to use UNIX directories for profile discovery
on windows that obviously cannot work.

Change-Id: I823378a1a094a2172ba2cb3bf9bdacedb27b36a2
Reviewed-on: https://gerrit.libreoffice.org/17349
Reviewed-by: David Ostrovsky <david@ostrovsky.org>
Tested-by: David Ostrovsky <david@ostrovsky.org>